feat(#125) : cors-config 수정
테스트하며 작업하기 위해 모든 메소드와 모든 헤더를 허용하는 설정 추가. 추후 공부해보고 디테일하게 수정할 예정.